# ecpo_ocrd

./: .gitignore  LICENSE.md  README.md  ocrd-tool.json  pyproject.toml
ecpo_ocrd/: __main__.py  install.py  labelstudio.py  ocrd-tool.json  workspace.py
workflows/: jingbao.sh
