# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    "setuptools-ocrd",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for ecpo_ocrd's version
[project]
name = "ecpo_ocrd"
description = "An OCR-D pipeline for ECPO"
readme = "README.md"
maintainers = [
    { name = "Dominic Kempf", email = "ssc@uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "ocrd",
    "tqdm",
]

[project.scripts]
ecpo_ocrd = "ecpo_ocrd.__main__:main"
ocrd-regions-to-labelstudio = "ecpo_ocrd.labelstudio:cli"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "ecpo_ocrd",
]
package-data = {"*" = ["ocrd-tool.json"]}
